--- a/langs/tinymce-advanced-pl_PL.po
+++ b/langs/tinymce-advanced-pl_PL.po
@@ -1,312 +1,252 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: TinyMCE Advanced\n"
-"POT-Creation-Date: 2015-04-02 17:49-0800\n"
-"PO-Revision-Date: 2015-04-02 18:04-0800\n"
-"Last-Translator: \n"
-"Language-Team: \n"
+"POT-Creation-Date: 2015-05-01 13:55+0100\n"
+"PO-Revision-Date: 2015-05-01 23:08+0100\n"
+"Last-Translator: Maciej Gryniuk <maciejka45@gmail.com>\n"
+"Language-Team: Maciej Gryniuk <maciejka45@gmail.com>\n"
 "Language: pl_PL\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 1.6.9\n"
+"X-Generator: Poedit 1.8beta1\n"
 "X-Poedit-Basepath: .\n"
-"Plural-Forms: nplurals=3; plural=(n==1 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 "
-"|| n%100>=20) ? 1 : 2);\n"
-"X-Poedit-KeywordsList: __;_e;__ngettext:1,2;_n:1,2;__ngettext_noop:1,2;"
-"_n_noop:1,2;_c,_nc:4c,1,2;_x:1,2c;_nx:4c,1,2;_nx_noop:4c,1,2;_ex:1,2c;"
-"esc_attr__;esc_attr_e;esc_attr_x:1,2c;esc_html__;esc_html_e;esc_html_x:1,2c\n"
+"Plural-Forms: nplurals=3; plural=(n==1 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
+"X-Poedit-KeywordsList: __;_e;__ngettext:1,2;_n:1,2;__ngettext_noop:1,2;_n_noop:1,2;_c,_nc:4c,1,2;_x:1,2c;_nx:4c,1,2;"
+"_nx_noop:4c,1,2;_ex:1,2c;esc_attr__;esc_attr_e;esc_attr_x:1,2c;esc_html__;esc_html_e;esc_html_x:1,2c\n"
 "X-Poedit-SearchPath-0: .\n"
 "X-Poedit-SearchPath-1: ..\n"
 
-#: ../tadv_admin.php:128
+#: ../tadv_admin.php:21
+#, php-format
+msgid ""
+"This plugin requires WordPress version %1$s or newer. Please upgrade your WordPress installation or download an <a href=\"%2$s"
+"\">older version of the plugin</a>."
+msgstr ""
+"Ta wtyczka wymaga WordPress'a w wersji %1$s lub nowszej. Proszę zaktualizować instalację WordPress'a lub pobrać <a href=\"%2$s"
+"\">starszą wersję wtyczki</a>."
+
+#: ../tadv_admin.php:145
 msgid "Default settings restored."
-msgstr "Domyślne ustawienia przywrócone."
+msgstr "Domyślne ustawienia zostały przywrócone."
 
-#: ../tadv_admin.php:137
+#: ../tadv_admin.php:154
 msgid "TinyMCE Advanced Settings Export"
-msgstr "Eksport Ustawień TinyMCE Advanced"
+msgstr "Ustawienia eksportu Zaawansowanego TinyMCE"
 
-#: ../tadv_admin.php:141
+#: ../tadv_admin.php:158
 msgid "The settings are exported as a JSON encoded string."
-msgstr "Ustawienia zostaną wyeksportowane jako zakodowany tekst JSON."
+msgstr "Ustawienia są eksportowane jako ciąg kodowany JSON."
 
-#: ../tadv_admin.php:142
-msgid ""
-"Please copy the content and save it in a <b>text</b> (.txt) file, using a "
-"plain text editor like Notepad."
-msgstr ""
-"Skopiuj tekst i zapisz go w pliku <b>tekstowym</b> (.txt), używając edytora "
-"zwykłego tekstu takiego jak Notatnik."
-
-#: ../tadv_admin.php:143
-msgid ""
-"It is important that the export is not changed in any way, no spaces, line "
-"breaks, etc."
-msgstr ""
-"Ważne jest, aby tekst nie został w żaden sposób zmieniony, żadnych spacji, "
-"nowych linii, itd."
-
-#: ../tadv_admin.php:148
-msgid "Select All"
-msgstr "Wybierz Wszystko"
-
-#: ../tadv_admin.php:150 ../tadv_admin.php:174
-msgid "Back to Editor Settings"
-msgstr "Powrót do Ustawień Edytora"
+#: ../tadv_admin.php:159
+msgid "Please copy the content and save it in a <b>text</b> (.txt) file, using a plain text editor like Notepad."
+msgstr "Proszę skopiować zawartość i zapisać ją jako <b>tekst</b> (plik .txt) przy pomocy prostego edytora tekstowego, jak Notatnik."
 
 #: ../tadv_admin.php:160
+msgid "It is important that the export is not changed in any way, no spaces, line breaks, etc."
+msgstr "Istotne jest, aby eksport nie został zmieniony w jakikolwiek sposób - brak spacji, przejścia do nowej linii itp."
+
+#: ../tadv_admin.php:165
+msgid "Select All"
+msgstr "Wybierz wszystko"
+
+#: ../tadv_admin.php:167 ../tadv_admin.php:191
+msgid "Back to Editor Settings"
+msgstr "Powrót do ustawień edytora"
+
+#: ../tadv_admin.php:177
 msgid "TinyMCE Advanced Settings Import"
-msgstr "Import Ustawień TinyMCE Advanced"
+msgstr "Ustawienia importu Zaawansowanego TinyMCE"
 
-#: ../tadv_admin.php:163
-msgid ""
-"The settings are imported from a JSON encoded string. Please paste the "
-"exported string in the text area below."
-msgstr ""
-"Ustawienia zostaną zaimportowane z zakodowanego tekstu JSON. Wklej "
-"wyeksportowany tekst poniżej."
+#: ../tadv_admin.php:180
+msgid "The settings are imported from a JSON encoded string. Please paste the exported string in the text area below."
+msgstr "Ustawienia są importowane z ciągu kodowanego JSON. Proszę wkleić wyeksportowany ciąg w polu tekstowym poniżej."
 
-#: ../tadv_admin.php:168
+#: ../tadv_admin.php:185
 msgid "Verify"
 msgstr "Zweryfikuj"
 
-#: ../tadv_admin.php:169
+#: ../tadv_admin.php:186
 msgid "Import"
 msgstr "Importuj"
 
-#: ../tadv_admin.php:196
+#: ../tadv_admin.php:213
 msgid "Importing of settings failed."
 msgstr "Importowanie ustawień nie powiodło się."
 
-#: ../tadv_admin.php:221
+#: ../tadv_admin.php:238
 msgid "ERROR: All toolbars are empty. Default settings loaded."
-msgstr ""
-"BŁĄD: Wszystkie paski narzędzi są puste. Domyślne ustawienia przywrócone."
+msgstr "BŁĄD: Wszystkie paski narzędzi są puste. Załadowano domyślne ustawienia."
 
-#: ../tadv_admin.php:233
+#: ../tadv_admin.php:250
 msgid "Editor Settings"
-msgstr "Ustawienia Edytora"
+msgstr "Ustawienia edytora"
 
-#: ../tadv_admin.php:244
-#, php-format
-msgid ""
-"This plugin requires WordPress version %1$s or newer. It appears that you "
-"are running %2$s. This can make the editor unstable."
+#: ../tadv_admin.php:268
+msgid "New in TinyMCE 4.0/WordPress 3.9 is the editor menu. When it is enabled, most buttons are also available as menu items."
 msgstr ""
-"This plugin requires WordPress version %1$s or newer. It appears that you "
-"are running %2$s. This can make the editor unstable."
+"Nowością w TinyMCE 4.0/WordPress 3.9 jest menu edytora. Gdy włączone, większość przycisków jest dostępna również z poziomu menu."
 
-#: ../tadv_admin.php:251
-#, php-format
-msgid ""
-"Please upgrade your WordPress installation or download an <a href=\"%s"
-"\">older version of the plugin</a>."
-msgstr ""
-"Zaktualizuj swoją instalację WordPressa lub pobierz <a href=\"%s\">starszą "
-"wersję tej wtyczki</a>."
-
-#: ../tadv_admin.php:261
-msgid "Settings saved."
-msgstr "Ustawienia zapisane."
-
-#: ../tadv_admin.php:270 ../tadv_admin.php:534
-msgid "Save Changes"
-msgstr "Zapisz Zmiany"
-
-#: ../tadv_admin.php:275
-msgid ""
-"New in TinyMCE 4.0/WordPress 3.9 is the editor menu. When it is enabled, "
-"most buttons are also available as menu items."
-msgstr ""
-"Nowością w TinyMCE 4.0/WordPressie 3.9 jest menu edytora. Gdy włączone, "
-"większość przycisków dostępne jest również jako opcje w menu."
-
-#: ../tadv_admin.php:279
+#: ../tadv_admin.php:272
 msgid "Enable the editor menu."
 msgstr "Włącz menu edytora."
 
-#: ../tadv_admin.php:391
+#: ../tadv_admin.php:384
 msgid ""
-"Drag buttons from the unused buttons below and drop them in the toolbars "
-"above, or drag the buttons in the toolbars to rearrange them."
+"Drag buttons from the unused buttons below and drop them in the toolbars above, or drag the buttons in the toolbars to rearrange "
+"them."
 msgstr ""
-"Przeciągnij przyciski z nieużywanych przycisków poniżej i upuść je w paskach "
-"powyżej, lub przeciągnij je w paskach, by zmienić ich położenie."
+"Przeciągnij przyciski z pola nieużywanych przycisków poniżej i upuść je na paskach narzędzi powyżej lub przeciągnij przyciski "
+"pośród pasków narzędzi, aby zmienić ich pozycję."
 
-#: ../tadv_admin.php:394
+#: ../tadv_admin.php:387
 msgid "Unused Buttons"
 msgstr "Nieużywane przyciski"
 
-#: ../tadv_admin.php:435
+#: ../tadv_admin.php:428
 msgid "Also enable:"
 msgstr "Włącz również:"
 
-#: ../tadv_admin.php:438
+#: ../tadv_admin.php:431
 msgid "List Style Options"
-msgstr "Ustawienia Stylu Listy"
+msgstr "Opcje stylu listy"
 
-#: ../tadv_admin.php:443
+#: ../tadv_admin.php:436
 msgid "Context Menu"
-msgstr "Menu Kontekstowe"
+msgstr "Menu kontekstowe"
 
-#: ../tadv_admin.php:448
+#: ../tadv_admin.php:441
 msgid "Link (replaces the Insert/Edit Link dialog)"
-msgstr "Link (zastępuje okno Wstaw/Edytuj Link)"
+msgstr "Odnośnik (zastępuje okna Wstaw/Edytuj odnośnik)"
 
-#: ../tadv_admin.php:458
+#: ../tadv_admin.php:451
 msgid "Advanced Options"
-msgstr "Ustawienia Zaawansowane"
+msgstr "Zaawansowane opcje"
 
-#: ../tadv_admin.php:466
+#: ../tadv_admin.php:459
 msgid "Import editor-style.css."
 msgstr "Zaimportuj editor-style.css."
 
-#: ../tadv_admin.php:468
+#: ../tadv_admin.php:461
 msgid "It seems your theme does not support customised styles for the editor."
-msgstr ""
-"Wygląda na to, że twój motyw nie wspiera zmodyfikowanych stylów dla edytora."
+msgstr "Wygląda na to, że Twój motyw nie wspiera własnych stylów dla edytora."
 
-#: ../tadv_admin.php:469
-msgid ""
-"You can create a CSS file named <code>editor-style.css</code> and upload it "
-"to your theme's directory."
-msgstr ""
-"Możesz utworzyć plik CSS nazwany <code>editor-style.css</code> i załadować "
-"go do katalogu twojego motywu."
+#: ../tadv_admin.php:462
+msgid "You can create a CSS file named <code>editor-style.css</code> and upload it to your theme's directory."
+msgstr "Możesz stworzyć plik CSS o nazwie <code>editor-style.css</code> i przesłać go do katalogu Twojego motywu."
 
-#: ../tadv_admin.php:470
+#: ../tadv_admin.php:463
 msgid "After that, enable this setting."
-msgstr "Gdy to zrobisz, aktywuj tą opcję."
+msgstr "Następnie aktywuj to ustawienie."
+
+#: ../tadv_admin.php:472
+msgid "Load the CSS classes used in editor-style.css and replace the Formats button and sub-menu."
+msgstr "Załaduj klasy CSS określone w editor-style.css i zastąp przycisk Formaty oraz jego podmenu."
+
+#: ../tadv_admin.php:477
+msgid "Markdown typing support (text pattern plugin)"
+msgstr "Wspieranie znaczników Markdown (wtyczka wzorców tekstu)"
 
 #: ../tadv_admin.php:479
-msgid ""
-"Load the CSS classes used in editor-style.css and replace the Formats button "
-"and sub-menu."
+msgid "This plugin matches special patterns while you type and applies formats or executes commands on the matched text."
 msgstr ""
-"Załaduj klasy CSS użyte w editor-style.css i zmień przycisk oraz podmenu "
-"Formaty."
+"Ta wtyczka szuka specjalnych wzorców, podczas gdy Ty piszesz i stosuje formatowanie lub wykonuje komendy na pasującym tekście."
 
-#: ../tadv_admin.php:484
-msgid "Markdown typing support (text pattern plugin)"
-msgstr "Wsparcie Markdown (wtyczka szablonu tekstu)"
-
-#: ../tadv_admin.php:486
+#: ../tadv_admin.php:480
 msgid ""
-"This plugin matches special patterns while you type and applies formats or "
-"executes commands on the matched text."
+"The default patterns are the same as the markdown syntax so you can type <code># text</code> to create a header, <code>1. text</"
+"code> to create a list, <code>**text**</code> to make it bold, etc."
 msgstr ""
-"Ta wtyczka będzie oznaczać specjalne wyrażenia podczas pisania i "
-"automatycznie dodawać formatowanie lub wykonywać polecenia na oznaczonym "
-"tekście."
+"Domyślne wzorce są takie same jak składnia znaczników Markdown, a więc możesz korzystać z <code># tekst</code> - aby stworzyć "
+"nagłówek, <code>1. tekst</code> - aby stworzyć listę,  <code>**tekst**</code> - aby pogrubić itp."
 
-#: ../tadv_admin.php:487
-msgid ""
-"The default patterns are the same as the markdown syntax so you can type "
-"<code># text</code> to create a header, <code>1. text</code> to create a "
-"list, <code>**text**</code> to make it bold, etc."
-msgstr ""
-"Domyślnie działa to jak Markdown, więc możesz napisać <code># tekst</code> "
-"aby stworzyć nagłówek, <code>1. tekst</code> aby stworzyć listę, "
-"<code>**tekst**</code> aby pogrubić, itd."
-
-#: ../tadv_admin.php:488
+#: ../tadv_admin.php:481
 msgid "More information"
 msgstr "Więcej informacji"
 
-#: ../tadv_admin.php:494
-msgid ""
-"Stop removing the &lt;p&gt; and &lt;br /&gt; tags when saving and show them "
-"in the Text editor"
-msgstr ""
-"Przestań usuwać tagi &lt;p&gt; i &lt;br /&gt; podczas zapisywania i pokazuj "
-"je w edytorze Tekstowym."
+#: ../tadv_admin.php:487
+msgid "Stop removing the &lt;p&gt; and &lt;br /&gt; tags when saving and show them in the Text editor"
+msgstr "Przestań usuwać tagów &lt;p&gt; i &lt;br /&gt; podczas zapisywania i pokazuj je w edytorze tekstowym"
 
-#: ../tadv_admin.php:496
-msgid ""
-"This will make it possible to use more advanced coding in the HTML editor "
-"without the back-end filtering affecting it much."
+#: ../tadv_admin.php:489
+msgid "This will make it possible to use more advanced coding in the HTML editor without the back-end filtering affecting it much."
 msgstr ""
-"Umożliwi to zaawansowaną edycję w edytorze HTMLa bez szczególnego "
-"filtrowania backendu zbyt zmieniającego pisany kod."
+"Umożliwi to korzystanie z zaawansowanego kodowania w edytorze HTML bez konieczności zbytniego ingerowania w edytorze tekstowym."
+
+#: ../tadv_admin.php:490
+msgid "However it may behave unexpectedly in rare cases, so test it thoroughly before enabling it permanently."
+msgstr ""
+"Jednakże, w niektórych przypadkach może to spowodować nieoczekiwane zachowanie, więc przetestuj to dokładnie przed włączeniem na "
+"stałe."
+
+#: ../tadv_admin.php:491
+msgid ""
+"Line breaks in the HTML editor would still affect the output, in particular do not use empty lines, line breaks inside HTML tags "
+"or multiple &lt;br /&gt; tags."
+msgstr ""
+"Przejścia do nowych linii w edytorze HTML mogą mieć nadal wpływ na kod wynikowy. Szczególnie nie twórz pustych linii, przejść do "
+"nowej linii wewnątrz tagów HTML lub kilkukrotnych tagów &lt;br /&gt;."
 
 #: ../tadv_admin.php:497
-msgid ""
-"However it may behave unexpectedly in rare cases, so test it thoroughly "
-"before enabling it permanently."
-msgstr ""
-"Może to jednak zachowywać się nieprzewidzianie w rzadkich przypadkach, więc "
-"przetestuj tą opcję dogłębnie przed korzystaniem z niej na stałe."
+msgid "Replace font size settings"
+msgstr "Zastąp ustawienia rozmiarów czcionki"
 
 #: ../tadv_admin.php:498
-msgid ""
-"Line breaks in the HTML editor would still affect the output, in particular "
-"do not use empty lines, line breaks inside HTML tags or multiple &lt;br /"
-"&gt; tags."
-msgstr ""
-"Znaki nowej linii w edytorze HTMLa nadal będą zmieniać wyjście, nie używaj "
-"pustych linii, nowych linii wewnątrz tagów HTMLa ani wielu tagów &lt;br /"
-"&gt;."
+msgid "Replaces the size setting available for fonts with: 8px 10px 12px 14px 16px 20px 24px 28px 32px 36px."
+msgstr "Zastępuje dostępne ustawienia rozmiarów czcionek na: 8px 10px 12px 14px 16px 20px 24px 28px 32px 36px."
 
-#: ../tadv_admin.php:504
-msgid "Replace font size settings"
-msgstr "Zmień ustawienia rozmiaru czcionki"
+#: ../tadv_admin.php:503
+msgid "Enable pasting of image source"
+msgstr "Włącz wklejanie źródła obrazka"
 
 #: ../tadv_admin.php:505
 msgid ""
-"Replaces the size setting available for fonts with: 8px 10px 12px 14px 16px "
-"20px 24px 28px 32px 36px."
+"Works only in Firefox and Safari. These browsers support pasting of images directly in the editor and convert them to base64 "
+"encoded text."
 msgstr ""
-"Zmienia dostępne rozmiary czcionki na: 8px 10px 12px 14px 16px 20px 24px "
-"28px 32px 36px."
+"Działa tylko w Firefoksie i Safari. Te przeglądarki wspierają wklejanie obrazków bezpośrednio w edytorze i konwertują je do tekstu "
+"kodowanego base64."
 
-#: ../tadv_admin.php:510
-msgid "Enable pasting of image source"
-msgstr "Włącz wklejanie źródeł obrazów."
-
-#: ../tadv_admin.php:512
+#: ../tadv_admin.php:506
 msgid ""
-"Works only in Firefox and Safari. These browsers support pasting of images "
-"directly in the editor and convert them to base64 encoded text."
+"This is not acceptable for larger images like photos or graphics, but may be useful in some cases for very small images like "
+"icons, not larger than 2-3KB."
 msgstr ""
-"Działa tylko w Firefoksie i Safari. Te przeglądarki umożliwiają wklejanie "
-"obrazów bezpośrednio w edytorze i ich konwersję do zakodowanego tekstu "
-"base64."
+"Nie jest to mile widziane przy dużych obrazkach, jak zdjęcia czy grafiki, ale może być bardzo przydatne w przypadku bardzo małych "
+"obrazków - jak ikony - nie większych od 2-3KB."
+
+#: ../tadv_admin.php:507
+msgid "These images will not be available in the Media Library."
+msgstr "Te obrazki nie będą dostępne w Bibliotece Mediów."
 
 #: ../tadv_admin.php:513
-msgid ""
-"This is not acceptable for larger images like photos or graphics, but may be "
-"useful in some cases for very small images like icons, not larger than 2-3KB."
-msgstr ""
-"Nie jest to sensowne dla dużych obrazów jak zdjęcia czy grafiki, ale może "
-"być przydatne dla bardzo małych obrazków jak ikony, nie większych niż 2-3KB."
-
-#: ../tadv_admin.php:514
-msgid "These images will not be available in the Media Library."
-msgstr "Obrazy te nie będą dostępne w Bibliotece Mediów."
-
-#: ../tadv_admin.php:520
 msgid "Administration"
 msgstr "Administracja"
 
-#: ../tadv_admin.php:522
+#: ../tadv_admin.php:515
 msgid "Export Settings"
-msgstr "Eksport Ustawień"
+msgstr "Eksportuj ustawienia"
 
-#: ../tadv_admin.php:523
+#: ../tadv_admin.php:516
 msgid "Import Settings"
-msgstr "Import Ustawień"
+msgstr "Importuj ustawienia"
 
-#: ../tadv_admin.php:533
+#: ../tadv_admin.php:526
 msgid "Restore Default Settings"
-msgstr "Przywróć Domyślne Ustawienia"
+msgstr "Przywróć ustawienia domyślne"
 
-#: ../tadv_admin.php:539
+#: ../tadv_admin.php:532
 msgid ""
-"The [Toolbar toggle] button shows or hides the second, third, and forth "
-"button rows. It will only work when it is in the first row and there are "
-"buttons in the second row."
+"The [Toolbar toggle] button shows or hides the second, third, and forth button rows. It will only work when it is in the first row "
+"and there are buttons in the second row."
 msgstr ""
-"Przycisk [Przełącz widoczność paska narzędzi] pokazuje lub ukrywa drugi, "
-"trzeci i czwarty rząd przycisków. Będzie działać tylko jeśli jest w "
-"pierwszym rzędzie i istnieją przyciski w drugim."
+"Przycisk [Przełącz widoczność paska narzędzi] pokazuje lub ukrywa drugi, trzeci oraz czwarty wiersz. Będzie działał tylko, gdy "
+"będzie znajdował się w pierwszym wierszu, a drugi wiersz będzie zawierał przyciski."
+
+#: ../tinymce-advanced.php:559
+msgid "TinyMCE Advanced"
+msgstr "Zaawansowany TinyMCE"
+
+#: ../tinymce-advanced.php:5
+msgid "Enables advanced features and plugins in TinyMCE, the visual editor in WordPress."
+msgstr "Dodaje zaawansowane fukcje i wtyczki do TinyMCE, wizualnego edytora w WordPress'ie."
