Little typo in pl_PL.

--- a/langs/tinymce-advanced-pl_PL.po
+++ b/langs/tinymce-advanced-pl_PL.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: TinyMCE Advanced\n"
 "POT-Creation-Date: 2015-05-01 13:55+0100\n"
-"PO-Revision-Date: 2015-05-01 23:08+0100\n"
+"PO-Revision-Date: 2015-05-01 23:09+0100\n"
 "Last-Translator: Maciej Gryniuk <maciejka45@gmail.com>\n"
 "Language-Team: Maciej Gryniuk <maciejka45@gmail.com>\n"
 "Language: pl_PL\n"
@@ -249,4 +249,4 @@ msgstr "Zaawansowany TinyMCE"
 
 #: ../tinymce-advanced.php:5
 msgid "Enables advanced features and plugins in TinyMCE, the visual editor in WordPress."
-msgstr "Dodaje zaawansowane fukcje i wtyczki do TinyMCE, wizualnego edytora w WordPress'ie."
+msgstr "Dodaje zaawansowane funkcje i wtyczki do TinyMCE, wizualnego edytora w WordPress'ie."
